Re-modified code

--- a/templates/admission.html
+++ b/templates/admission.html
@@ -139,7 +139,7 @@
             <div id="genderError"></div>
         </div>
 
-        <div class="common">
+        <!-- <div class="common">
             <label>Department</label>
             <select id="department" name = "department">
                 <option value="">-- Select Department --</option>
@@ -151,7 +151,21 @@
                 <option>Electrical Engineering</option>
             </select>
             <div id="deptError"></div>
+        </div> -->
+                <div class="common">
+            <label>Department</label>
+            <select id="department" name="department">
+                <option value="">-- Select Department --</option>
+                <option value="CSE">Computer Science & Engineering</option>
+                <option value="AIML">CSE ( AI & ML )</option>
+                <option value="DS">CSE ( Data Science )</option>
+                <option value="MECH">Mechanical Engineering</option>
+                <option value="CIVIL">Civil Engineering</option>
+                <option value="EEE">Electrical Engineering</option>
+            </select>
+            <div id="deptError"></div>
         </div>
+
 
         <button type="submit">Submit</button>
     </form>
